--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ img {
   list-style: none;
 }
 
+
 .card-list i {
  font-size: 30px;
 }
@@ -90,3 +91,30 @@ img {
   padding: 0px 20px;
 }
 
+#sidebar {
+  position: fixed;
+  width: 100px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #DD5555;
+  list-style: none;
+}
+
+#sidebar li {
+  list-style: none;
+  padding: 20px 0px 20px 0px;
+}
+
+#sidebar i {
+  font-size: 25px;
+}
+
+#sidebar i:hover {
+  color: white;
+}
+
+
+#page-content {
+  margin-left: 100px;
+}
